--- a/style.css
+++ b/style.css
@@ -22,10 +22,28 @@ body {
   color: lawngreen;
   text-align: center;
   margin: 1rem 0.75rem 0.75rem 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #header h1 {
   font-size: 4rem;
+}
+
+#header p>span {
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.directions {
+  width: 35%;
+  margin: auto;
+  text-align: start;
+}
+
+.directions ol {
+  list-style-position: inside;
 }
 
 /* Input Section */
